Created hibernate-tutorial submodule Created TestJdbc object to test JDBC connection Created Student entity Created CreateUserDemoApp to create a row in database table from Student object Added hibernate.cfg.xml to resources Added sql-scripts to root directory with example SQL scripts

--- a/pom.xml
+++ b/pom.xml
@@ -161,5 +161,6 @@
     </build>
     <modules>
         <module>spring-config-annotations</module>
+        <module>hibernate-tutorial</module>
     </modules>
 </project>
