Added hibernate-demo module to practice what was learned in the videos about Hibernate

--- a/pom.xml
+++ b/pom.xml
@@ -162,5 +162,6 @@
     <modules>
         <module>spring-config-annotations</module>
         <module>hibernate-tutorial</module>
+        <module>hibernate-demo</module>
     </modules>
 </project>
