--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,6 @@
     <packaging>pom</packaging>
 
     <name>spring-hibernate-udemy</name>
-
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -22,6 +21,13 @@
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>javax.servlet</groupId>
+                <artifactId>servlet-api</artifactId>
+                <version>3.0-alpha-1</version>
+                <scope>provided</scope>
+            </dependency>
+
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-webmvc</artifactId>
@@ -163,5 +169,6 @@
         <module>spring-config-annotations</module>
         <module>hibernate-tutorial</module>
         <module>hibernate-demo</module>
+        <module>web-customer-tracker</module>
     </modules>
 </project>
