--- a/hb-01-one-to-one-uni/pom.xml
+++ b/hb-01-one-to-one-uni/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>hb-01-one-to-one-uni</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <name>hibernate-tutorial</name>
+    <name>hb-01-one-to-one-uni</name>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -21,6 +21,14 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>com.luv2code</groupId>
+            <artifactId>hibernate-wrapper</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-api</artifactId>
