--- a/hibernate-demo/pom.xml
+++ b/hibernate-demo/pom.xml
@@ -19,6 +19,10 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.luv2code</groupId>
+            <artifactId>hibernate-wrapper</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-api</artifactId>
         </dependency>
