--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,21 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
+                <groupId>com.luv2code</groupId>
+                <artifactId>hibernate-wrapper</artifactId>
+                <version>1.0-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-simple</artifactId>
+                <version>2.0.0-alpha1</version>
+            </dependency>
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+                <version>2.0.0-alpha1</version>
+            </dependency>
+            <dependency>
                 <groupId>org.apache.logging.log4j</groupId>
                 <artifactId>log4j-api</artifactId>
                 <version>2.13.3</version>
@@ -35,7 +50,6 @@
                 <groupId>javax.servlet</groupId>
                 <artifactId>servlet-api</artifactId>
                 <version>3.0-alpha-1</version>
-                <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>mysql</groupId>
@@ -183,5 +197,6 @@
         <module>hibernate-demo</module>
         <module>hb-01-one-to-one-uni</module>
         <module>web-customer-tracker</module>
+        <module>hibernate-wrapper</module>
     </modules>
 </project>
