--- a/.gitignore
+++ b/.gitignore
@@ -101,6 +101,7 @@ spring-config-annotations/spring-config-annotations.iml
 spring-hibernate-udemy.iml
 web-customer-tracker/web-customer-tracker.iml
 hb-01-one-to-one-uni/hb-01-one-to-one-uni.iml
+hibernate-wrapper/hibernate-wrapper.iml
 
 .idea/encodings.xml
 .idea/modules.xml
