--- a/web-customer-tracker/pom.xml
+++ b/web-customer-tracker/pom.xml
@@ -19,6 +19,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.luv2code</groupId>
+            <artifactId>hibernate-wrapper</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>jstl</artifactId>
             <version>1.2</version>
