Modified CustomerController to add list of customers to model Modified list-customers to show list of customers Fixed Customer to have correct column names Added HibernateJpaAutoConfiguration to be excluded in WebCustomerTracker Added slf4j-simple and servlet-api to web-customer-tracker pom.xml Added Tomcat version to root pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <scala.version>2.13.2</scala.version>
         <spring-framework.version>5.2.7.RELEASE</spring-framework.version>
         <spring-boot.version>2.3.1.RELEASE</spring-boot.version>
+        <tomcat.version>9.0.34</tomcat.version>
     </properties>
 
     <dependencyManagement>
