--- a/pom.xml
+++ b/pom.xml
@@ -15,9 +15,9 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <java.version>1.8</java.version>
         <scala.version>2.13.2</scala.version>
-        <spring-framework.version>5.2.7.RELEASE</spring-framework.version>
-        <spring-boot.version>2.3.1.RELEASE</spring-boot.version>
-        <tomcat.version>9.0.34</tomcat.version>
+        <spring-framework.version>5.2.8.RELEASE</spring-framework.version>
+        <spring-boot.version>2.3.2.RELEASE</spring-boot.version>
+        <tomcat.version>9.0.37</tomcat.version>
     </properties>
 
     <dependencyManagement>
@@ -135,6 +135,21 @@
                         <groupId>org.apache.logging.log4j</groupId>
                         <artifactId>log4j-to-slf4j</artifactId>
                     </exclusion>
+                    <exclusion>
+                        <groupId>org.springframework.boot</groupId>
+                        <artifactId>spring-boot-starter-tomcat</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-tomcat</artifactId>
+                <version>${spring-boot.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.apache.logging.log4j</groupId>
+                        <artifactId>log4j-to-slf4j</artifactId>
+                    </exclusion>
                 </exclusions>
             </dependency>
 
@@ -228,9 +243,10 @@
         <module>spring-config-annotations</module>
         <module>hibernate-tutorial</module>
         <module>hibernate-demo</module>
-        <module>hb-01-one-to-one-bi</module>
+        <module>hb-02-one-to-one-bi</module>
         <module>hb-03-one-to-many</module>
         <module>hb-04-one-to-one-uni</module>
+        <module>hb-05-many-to-many</module>
         <module>hb-eager-vs-lazy-demo</module>
         <module>web-customer-tracker</module>
         <module>hibernate-wrapper</module>
