Got Thymeleaf working with CSS by adding a few beans

--- a/web-customer-tracker/src/main/resources/application.properties
+++ b/web-customer-tracker/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.mvc.view.prefix=/WEB-INF/jsp/
-spring.mvc.view.suffix=.jsp
-spring.view.prefix=/WEB-INF/jsp/
-spring.view.suffix=.jsp
-spring.thymeleaf.suffix=.jsp
+#spring.mvc.view.prefix=/WEB-INF/jsp/
+#spring.mvc.view.suffix=.jsp
+#spring.view.prefix=/WEB-INF/jsp/
+#spring.view.suffix=.jsp
+#spring.thymeleaf.suffix=.jsp
 logging.level.org.springframework=TRACE
 logging.level.com=TRACE
