--- a/hb-04-one-to-one-uni/pom.xml
+++ b/hb-04-one-to-one-uni/pom.xml
@@ -9,10 +9,10 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>hb-04-one-to-one-uni</artifactId>
+    <artifactId>hb-04-one-to-many-uni</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <name>hb-04-one-to-one-uni</name>
+    <name>hb-04-one-to-many-uni</name>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
