--- a/pom.xml
+++ b/pom.xml
@@ -59,8 +59,8 @@
             </dependency>
             <dependency>
                 <groupId>javax.servlet</groupId>
-                <artifactId>servlet-api</artifactId>
-                <version>3.0-alpha-1</version>
+                <artifactId>javax.servlet-api</artifactId>
+                <version>4.0.1</version>
             </dependency>
             <dependency>
                 <groupId>mysql</groupId>
@@ -246,5 +246,6 @@
         <module>hb-eager-vs-lazy-demo</module>
         <module>web-customer-tracker</module>
         <module>hibernate-wrapper</module>
+        <module>spring-demo-aop</module>
     </modules>
 </project>
