Added aspectj dependency to root pom.xml and spring-demo-aop pom.xml Replaced servlet-api dependency with javax.servlet-api dependency in hibernate-wrapper pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,13 @@
                 <artifactId>hibernate-wrapper</artifactId>
                 <version>1.0-SNAPSHOT</version>
             </dependency>
+
+            <dependency>
+                <groupId>org.aspectj</groupId>
+                <artifactId>aspectjweaver</artifactId>
+                <version>1.9.6</version>
+            </dependency>
+
             <dependency>
                 <groupId>org.apache.logging.log4j</groupId>
                 <artifactId>log4j-1.2-api</artifactId>
@@ -83,6 +90,11 @@
                 <version>0.9.5.5</version>
             </dependency>
 
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-aop</artifactId>
+                <version>${spring-framework.version}</version>
+            </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-orm</artifactId>
