Added web-customer-tracker-aop to add aspects to web-customer-tracker Modified WebAppInitializer to use a single application context for both root context and dispatcher context and removed WebAppConfig

--- a/pom.xml
+++ b/pom.xml
@@ -257,6 +257,7 @@
         <module>hb-05-many-to-many</module>
         <module>hb-eager-vs-lazy-demo</module>
         <module>web-customer-tracker</module>
+        <module>web-customer-tracker-aop</module>
         <module>hibernate-wrapper</module>
         <module>spring-demo-aop</module>
     </modules>
