Added ujson-demo module to showcase deserializing JSON with ujson

--- a/pom.xml
+++ b/pom.xml
@@ -260,5 +260,6 @@
         <module>web-customer-tracker-aop</module>
         <module>hibernate-wrapper</module>
         <module>spring-demo-aop</module>
+        <module>ujson-demo</module>
     </modules>
 </project>
