--- a/pom.xml
+++ b/pom.xml
@@ -18,10 +18,17 @@
         <spring-framework.version>5.2.8.RELEASE</spring-framework.version>
         <spring-boot.version>2.3.2.RELEASE</spring-boot.version>
         <tomcat.version>9.0.37</tomcat.version>
+        <jackson.version>2.11.2</jackson.version>
     </properties>
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>com.fasterxml.jackson.module</groupId>
+                <artifactId>jackson-module-scala_2.13</artifactId>
+                <version>${jackson.version}</version>
+            </dependency>
+
             <dependency>
                 <groupId>com.luv2code</groupId>
                 <artifactId>hibernate-wrapper</artifactId>
